# smooth-noisy-max

./: .gitignore  README.md
greedy_decision_tree/: experiment.py  pyproject.toml  setup.py
greedy_decision_tree/datasets/: acs.parquet  adult.parquet  adult_clean.parquet  adult_disc_20bucks.csv  adult_disc_20bucks.parquet  nltcs.parquet
greedy_decision_tree/experiments_log/: lln.csv  lln_lap.csv  new_ones.csv
greedy_decision_tree/src/: attribute.py  dataset.py  dp_id3.py  logger.py  multinomial_tree.py  node.py  plot.py  tree.py
greedy_decision_tree/src/dispersion/: dispersion.py  entropy.py  info_gain.py  max.py
greedy_decision_tree/src/selection/: default.py  exponential.py  local_damp.bkp  local_dampening.py  rnm.py  selection.py
greedy_decision_tree/src/selection/dampening/: dampening_func.pyx  delta_base.pxd  delta_base.pyx  delta_info_gain.pxd  (+1 more)
greedy_decision_tree/src/utils/: safe_exp.pxd  safe_exp.pyx
random_forest/: dampening.py  experiment.py  forest.py  node.py  plot_results.py  pyproject.toml  pyrightconfig.json  tree.py
random_forest/data/: compass.csv  gamma.csv  pendigits.csv  wallsensor.csv
random_forest/result/adult/: describe.csv  info.csv
random_forest/result/compass/: describe.csv  info.csv
random_forest/result/mushroom/: describe.csv  info.csv
random_forest/result/pendigits/: describe.csv  info.csv
random_forest/result/wallsensor/: describe.csv  info.csv
random_forest/result/wine/: describe.csv  info.csv
random_forest/utils/: dataset.py  experiment_logger.py  experiment_run.py  experiment_type.py  np_cache.py  seed.py
(+106 files in other folders)
