[tool.poetry]
name = "greedy-rlnm"
version = "0.1.0"
description = ""
authors = ["Iago Chaves <iagocc@gmail.com>"]
readme = "README.md"
packages = [{include = "greedy_rlnm"}]
build = "setup.py"

[tool.poetry.dependencies]
python = "^3.11.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
pydantic = "^2.4.2"
cython = "^3.0.5"
setuptools = "^68.2.2"
mpmath = "^1.3.0"
fastparquet = "^2023.10.1"

[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"

[tool.black]
line-length = 140


[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
